# scrolis-api

./: .gitignore  README.md  TiktokAPIService.py  config.py  docker-compose.yml  main.py  pyproject.toml  start_dev_server.sh
api/models/: requests.py
api/routes/: analysis.py  auth.py  reddit.py  security.py  tiktok.py  tweet.json  twitter.py
cron/: calculate_topic_preferences.py  cleanup_digests.py  generate_historical_digest.py
db/: init.sql
logs/: app.log.2026-04-28  app.log.2026-04-29  app.log.2026-04-30  app.log.2026-05-04  app.log.2026-05-05
mongo-init/: init.js
service/: AnalysisService.py  MongoDBService.py  RedditService.py  TwitterXAPIService.py  app_services.py  db.py
service/models/: authentication.py
