[tool.poetry]
name = "refract-api"
version = "0.1.0"
description = "FastAPI backend for Refract capstone project"
authors = ["Supakarn B <30888519+courtofdreams@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "refract_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.128.0"
uvicorn = {version = "^0.40.0", extras = ["standard"]}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pymongo = "^4.6.0"
requests = "^2.32.0"
httpx = "^0.28.0"
python-dotenv = "^1.0.0"
tweepy = "^4.14.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
